JumpScript/tests/baselines/reference/intersectionTypeReadonly.errors.txt
tests/cases/conformance/types/intersection/intersectionTypeReadonly.jump(17,6): error TS2540: Cannot assign to 'value' because it is a constant or a read-only property.
tests/cases/conformance/types/intersection/intersectionTypeReadonly.jump(19,11): error TS2540: Cannot assign to 'value' because it is a constant or a read-only property.
tests/cases/conformance/types/intersection/intersectionTypeReadonly.jump(21,9): error TS2540: Cannot assign to 'value' because it is a constant or a read-only property.
tests/cases/conformance/types/intersection/intersectionTypeReadonly.jump(23,15): error TS2540: Cannot assign to 'value' because it is a constant or a read-only property.
tests/cases/conformance/types/intersection/intersectionTypeReadonly.jump(25,15): error TS2540: Cannot assign to 'value' because it is a constant or a read-only property.


==== tests/cases/conformance/types/intersection/intersectionTypeReadonly.jump (5 errors) ====
    interface Base {
        readonly value: number;
    }
    interface Identical {
        readonly value: number;
    }
    interface Mutable {
        value: number;
    }
    interface DifferentType {
        readonly value: string;
    }
    interface DifferentName {
        readonly other: number;
    }
    let base: Base;
    base.value = 12 // error, lhs can't be a readonly property
         ~~~~~
!!! error TS2540: Cannot assign to 'value' because it is a constant or a read-only property.
    let identical: Base & Identical;
    identical.value = 12; // error, lhs can't be a readonly property
              ~~~~~
!!! error TS2540: Cannot assign to 'value' because it is a constant or a read-only property.
    let mutable: Base & Mutable;
    mutable.value = 12; // error, lhs can't be a readonly property
            ~~~~~
!!! error TS2540: Cannot assign to 'value' because it is a constant or a read-only property.
    let differentType: Base & DifferentType;
    differentType.value = 12; // error, lhs can't be a readonly property
                  ~~~~~
!!! error TS2540: Cannot assign to 'value' because it is a constant or a read-only property.
    let differentName: Base & DifferentName;
    differentName.value = 12; // error, property 'value' doesn't exist
                  ~~~~~
!!! error TS2540: Cannot assign to 'value' because it is a constant or a read-only property.
    